Post 1.게시글 조회수 필드 추가 2.Redis기반 조회수 중복 방지(10분) 3. nickname필드 추가 4. 댓글 트리구조
Comment
1. 댓글 parentId기반 트리구조
2. nickname추가
3. 댓글 삭제 하위 댓글 삭제-> 트랜잭션 오류 해결
4. 댓글 수정 시, edited & updatedAt

Shorts
1. Post와 마찬가지의 추가 변경진행함