@@ -5,11 +5,13 @@ import org.springframework.stereotype.Service;
 import com.google.api.core.ApiFuture;
 import com.google.cloud.Timestamp;
 import com.google.cloud.firestore.*;
-
+import com.op.back.comment.dto.CommentResponse;
 import com.op.back.common.service.FirebaseStorageService;
 import com.op.back.post.dto.PostCreateRequest;
 import com.op.back.post.dto.PostResponse;
 import com.op.back.post.model.Post;
+
+import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
@@ -18,6 +20,7 @@ import java.io.IOException;
 import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeUnit;
 
 @Service
 @RequiredArgsConstructor
@@ -27,16 +30,21 @@ public class PostService {
 
     private final PostCleanupService cleanupService;
 
+    //RedisTemplate
+    private final StringRedisTemplate redisTemplate;
+
     private static final String POSTS_COLLECTION = "posts";
 
     //게시글 생성
-    public String createPost(PostCreateRequest request,MultipartFile mediaFile, String uid)
+    public PostResponse createPost(PostCreateRequest request,MultipartFile mediaFile,
+        String uid)
             throws IOException, ExecutionException, InterruptedException {
+
         String postId = UUID.randomUUID().toString();
 
         String mediaUrl = storageService.uploadFile(
                 mediaFile,
-                "posts/"+uid+"/"+postId
+                "posts/" + uid + "/" + postId
         );
 
         Map<String, Object> data = new HashMap<>();
@@ -44,12 +52,13 @@ public class PostService {
         data.put("content", request.getContent());
         data.put("mediaUrl", mediaUrl);
         data.put("mediaType", request.getMediaType());
-        data.put("hashtags", request.getHashtags() != null ? request.getHashtags() : Collections.emptyList());
+        data.put("hashtags", Optional.ofNullable(request.getHashtags()).orElse(List.of()));
         data.put("commentAvailable",
                 request.getCommentAvailable() != null ? request.getCommentAvailable() : true
         );
         data.put("likeCount", 0L);
         data.put("commentCount", 0L);
+        data.put("viewCount", 0L);
         data.put("createdAt", Timestamp.now());
 
         firestore.collection(POSTS_COLLECTION)
@@ -57,8 +66,10 @@ public class PostService {
                 .set(data)
                 .get();
 
-        return postId;
+        // 생성 직후 상세조회해서 Response 반환
+        return getPost(postId, uid);
     }
+
 
 
     //최신 게시글 목록 조회
@@ -77,7 +88,9 @@ public class PostService {
             Post post = toPost(doc);
             boolean liked = isLikedByUser(post.getId(),currentUid);
             boolean bookmarked = isBookmarkedByUser(post.getId(),currentUid);
-            result.add(toResponse(post,liked, bookmarked));
+            result.add(
+                toListResponse(post, liked, bookmarked, currentUid)
+            );
         }
 
         return result;
@@ -87,6 +100,7 @@ public class PostService {
     //단일 게시글 조회
     public PostResponse getPost(String postId, String currentUid)
             throws ExecutionException, InterruptedException {
+                
         DocumentSnapshot doc = firestore.collection(POSTS_COLLECTION)
                 .document(postId)
                 .get()
@@ -96,11 +110,19 @@ public class PostService {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND,"Post not found");
         }
 
+        //조회수 처리
+        handleViewCount(postId, currentUid);
+
         Post post = toPost(doc);
         boolean liked = isLikedByUser(post.getId(),currentUid);
         boolean bookmarked = isBookmarkedByUser(post.getId(),currentUid);
 
-        return toResponse(post,liked,bookmarked);
+        return toDetailResponse(
+                post,
+                liked,
+                bookmarked,
+                currentUid
+        );
     }
 
     //게시글 삭제(only owner)
@@ -200,8 +222,8 @@ public class PostService {
 
 
     //해쉬태그 검색
-    public List<PostResponse> searchByHashtag(String tag, int limit, String currentUid)
-            throws ExecutionException, InterruptedException {
+    public List<PostResponse> searchByHashtag(String tag,int limit,
+            String currentUid) throws ExecutionException, InterruptedException {
 
         Query query = firestore.collection(POSTS_COLLECTION)
                 .whereArrayContains("hashtags", tag)
@@ -215,11 +237,29 @@ public class PostService {
             Post post = toPost(doc);
             boolean liked = isLikedByUser(post.getId(), currentUid);
             boolean bookmarked = isBookmarkedByUser(post.getId(), currentUid);
-            result.add(toResponse(post, liked, bookmarked));
+
+            result.add(
+                    toListResponse(post, liked, bookmarked, currentUid)
+            );
         }
+
         return result;
     }
 
+    //조회수 증가
+    private void increaseViewCount(String postId)
+            throws ExecutionException, InterruptedException {
+
+        DocumentReference postRef =
+                firestore.collection(POSTS_COLLECTION).document(postId);
+
+        firestore.runTransaction(tx -> {
+            DocumentSnapshot snap = tx.get(postRef).get();
+            Long count = Optional.ofNullable(snap.getLong("viewCount")).orElse(0L);
+            tx.update(postRef, "viewCount", count + 1);
+            return null;
+        }).get();
+    }
 
 
     // **내부 유틸 메서드** //
@@ -234,18 +274,17 @@ public class PostService {
                 .commentAvailable(doc.getBoolean("commentAvailable"))
                 .likeCount(Optional.ofNullable(doc.getLong("likeCount")).orElse(0L))
                 .commentCount(Optional.ofNullable(doc.getLong("commentCount")).orElse(0L))
+                .viewCount(Optional.ofNullable(doc.getLong("viewCount")).orElse(0L)) // ✅
                 .createdAt(doc.getTimestamp("createdAt"))
                 .build();
     }
 
-    private PostResponse toResponse(Post post, boolean liked, boolean bookmarked) {
-        Instant created = post.getCreatedAt() != null
-                ? Instant.ofEpochSecond(post.getCreatedAt().getSeconds(), post.getCreatedAt().getNanos())
-                : null;
-
+    private PostResponse toListResponse(Post post,boolean liked,
+            boolean bookmarked,String currentUid){
         return PostResponse.builder()
                 .id(post.getId())
                 .uid(post.getUid())
+                .nickname(getNickname(post.getUid()))
                 .content(post.getContent())
                 .mediaUrl(post.getMediaUrl())
                 .mediaType(post.getMediaType())
@@ -253,9 +292,32 @@ public class PostService {
                 .commentAvailable(post.getCommentAvailable())
                 .likeCount(post.getLikeCount())
                 .commentCount(post.getCommentCount())
+                .viewCount(post.getViewCount())
                 .liked(liked)
                 .bookmarked(bookmarked)
-                .createdAt(created)
+                .mine(post.getUid().equals(currentUid))
+                .createdAt(toInstant(post.getCreatedAt()))
+                .build();
+    }
+
+    private PostResponse toDetailResponse(Post post,boolean liked,boolean bookmarked,
+            String currentUid) {
+        return PostResponse.builder()
+                .id(post.getId())
+                .uid(post.getUid())
+                .nickname(getNickname(post.getUid()))
+                .content(post.getContent())
+                .mediaUrl(post.getMediaUrl())
+                .mediaType(post.getMediaType())
+                .hashtags(post.getHashtags())
+                .commentAvailable(post.getCommentAvailable())
+                .likeCount(post.getLikeCount())
+                .commentCount(post.getCommentCount())
+                .viewCount(post.getViewCount())
+                .liked(liked)
+                .bookmarked(bookmarked)
+                .mine(post.getUid().equals(currentUid))
+                .createdAt(toInstant(post.getCreatedAt()))
                 .build();
     }
 
@@ -284,5 +346,48 @@ public class PostService {
                 .get()
                 .get();
         return snap.exists();
+    }
+
+    private Instant toInstant(Timestamp ts) {
+        if (ts == null) return null;
+        return Instant.ofEpochSecond(ts.getSeconds(), ts.getNanos());
+    }
+
+    //닉네임 조회
+    private String getNickname(String uid) {
+        if(uid == null) return null;
+        try{
+            DocumentSnapshot userDoc = firestore
+                    .collection("users")
+                    .document(uid)
+                    .get()
+                    .get();
+
+            if (!userDoc.exists()) return null;
+            return userDoc.getString("nickname");
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    //레디스 기반 조회수 처리
+    private void handleViewCount(String postId, String uid)
+            throws ExecutionException, InterruptedException {
+        
+        // 비로그인 유저 제외        
+        if (uid == null) return; 
+        String key = "post:view:" + postId + ":" + uid;
+
+        Boolean exists = redisTemplate.hasKey(key);
+        if (Boolean.TRUE.equals(exists)) {
+            return;
+        }
+
+        // Redis에 기록 (TTL 10분)
+        redisTemplate.opsForValue()
+                .set(key, "1", 10, TimeUnit.MINUTES);
+
+        // Firestore 증가
+        increaseViewCount(postId);
     }
 }
